[package]
name = "askama_axum"
version = "0.3.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
axum = { git = "https://github.com/tokio-rs/axum", rev = "3ff45d9c96b5192af6b6ec26eb2a2bfcddd00d7d", features = ["macros", "ws"] }
http = "0.2"
